--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,154 @@
 html{
     font-size: 62.5%;
-    color: white;
+    color: black;
 }
-
-body{
-    background-image: linear-gradient(to right bottom, #000000, #2d262c, #4c4a5b, #5f748f, #68a4bd, #68a4bd, #68a4bd, #68a4bd, #5f748f, #4c4a5b, #2d262c, #000000);
+body {
+    background-image: linear-gradient(to right top, #200c18, #20041b, #2a0935, #40926c, #9a9ae1, #8aa7ec, #94bdeb, #83b4d4, #87a9b6, #b1ecf8, #78e5ec, #96eee8);
     display: grid;
     font-family: 'Nunito', sans-serif;
     height: 100vh;
     margin: 0;
     place-items: center;
-}
-
-.card {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr;
-    height: 100px;
-    position: relative;
-    width: 100%;
-}
-​
-.card > div:first-child {
-    align-items: center;
-    border-radius: 16px;
-    display: flex;
-    grid-column: 1 / 5;
-    grid-row: 1 / 2;
-    z-index: 1;
-}
-​
-.card > div:first-child p {
-    color: white;
-    margin: 0;
-    padding-right: 7px;
-    transform: rotate(180deg);
-    writing-mode: vertical-rl;
-}
-​
-.card > div:last-child {
-    border-radius: 16px;
-    display: grid;
-    grid-column: 2 / 5;
-    grid-row: 1 / 2;
-    justify-content: center;
-    z-index: 2;
-}
-​
-.card > div:last-child p:first-child {
-    font-size: 24px;
-    font-weight: 600; 
-    margin: 18px 0 -8px 0;
-}
-​
-.card > div:last-child p:last-child {
-    margin: 0;
-}
-​
-.margin-bottom-card {
-  margin-bottom: 20px;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 20px;
-    height: 90%;
-    width: 80%;
-}
-
-.padding-box {
-    box-sizing: border-box;
-    padding: 24px;
-}
-
-.glassmorphism-effect {
+  }
+  
+  .glassmorphism-effect {
     background: rgba( 255, 255, 255, 0.10 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     -webkit-backdrop-filter: blur( 4px );
             backdrop-filter: blur( 4px );
     border-radius: 16px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
-}
-
-.goals {
-    align-items: center;
+  }
+  
+  .padding-box {
+    box-sizing: border-box;
+    padding: 24px;
+  }
+  
+  .margin-bottom-card {
+    margin-bottom: 20px;
+  }
+  
+  .title p:first-child {
+    font-size: 28px;
+    font-weight: 600;
+    margin: 0;
+  }
+  
+  .title p:last-child {
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 20px;
+    height: 90%;
+    width: 80%;
+  }
+  
+  .goals {
     display: flex;
-}
-​
-.goals div {
+    align-items: center;
+  }
+  
+  .goals div {
     align-items: center;
     border-radius: 50%;
     display: flex;
-    height: 40px;
     justify-content: center;
     margin-right: 10px;
+    height: 40px;
     width: 40px;
-}
-​
-.goals img {
+  }
+  
+  .goals img {
     width: 30px;
-}
-
-.main-content > div:nth-child(2) {
+  }
+  
+  .main-content > div:nth-child(2) {
     display: grid;
-    grid-gap: 20px;
     grid-template-columns: repeat(5, 1fr);
-}
-
-.title p:first-child {
-    font-size: 3rem;
-    font-weight: 600;
+    grid-gap: 20px;
+  }
+  
+  .card {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    height: 100px;
+    position: relative;
+    width: 100%;
+  }
+  
+  .card > div:first-child {
+    align-items: center;
+    border-radius: 16px;
+    display: flex;
+    grid-column: 1 / 5;
+    grid-row: 1 / 2;
+    z-index: 1;
+  }
+  
+  .card > div:first-child p {
+    color: white;
     margin: 0;
-}
-​
-.title p:last-child {
-    font-size: 2rem;
-    margin-bottom: 30px;
-}
+    padding-right: 7px;
+    transform: rotate(180deg);
+    writing-mode: vertical-rl;
+  }
+  
+  .card > div:last-child {
+    border-radius: 16px;
+    display: grid;
+    grid-column: 2 / 5;
+    grid-row: 1 / 2;
+    justify-content: center;
+    z-index: 2;
+  }
+  
+  .card > div:last-child p:first-child {
+    font-size: 24px;
+    font-weight: 600; 
+    margin: 18px 0 -8px 0;
+  }
+  
+  .card > div:last-child p:last-child {
+    margin: 0;
+  }
+  
+  .bubble {
+    border-radius: 50%;
+    position: absolute;
+  }
+  
+  .bubble-one {
+    height: 80px;
+    left: 300px;
+    top: 10px;
+    width: 80px;
+  }
+  
+  .bubble-two {
+    height: 230px;
+    right: 200px;
+    top: -50px;
+    width: 230px;
+  }
+  
+  .bubble-three {
+    height: 50px;
+    right: 450px;
+    top: -20px;
+    width: 50px;
+  }
+  
+  .bubble-four {
+    bottom: 40px;
+    height: 100px;
+    left: -30px;
+    width: 100px;
+  }
+  
+  
